--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
- "scripts": {
+  "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev -p 7001",
     "generate": "nuxt generate",
@@ -18,6 +18,7 @@
     "core-js": "^3.15.1",
     "lodash": "^4.17.21",
     "nuxt": "3.0.0-rc.12",
-    "vue-json-viewer": "^3.0.4"
+    "vue-json-viewer": "^3.0.4",
+    "vue-tailwind-datepicker": "^1.1.5"
   }
 }
