--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.2.0",
     "core-js": "^3.15.1",
     "lodash": "^4.17.21",
     "nuxt": "3.0.0-rc.12",
