--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
+    "@pinia/nuxt": "^0.4.6",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.0",
     "core-js": "^3.15.1",
     "lodash": "^4.17.21",
     "nuxt": "3.0.0-rc.12",
+    "pinia": "^2.0.28",
     "vue-json-viewer": "^3.0.4",
     "vue-tailwind-datepicker": "^1.1.5",
     "vue3-datepicker": "^0.3.4"
